修改文件上传的方式

--- a/GMMS/GMMS.csproj
+++ b/GMMS/GMMS.csproj
@@ -178,6 +178,9 @@
     <Content Include="Areas\User\Views\UserManage\UserDetail.cshtml" />
     <Content Include="Areas\User\Views\Drawing\DrawingView.cshtml" />
     <Content Include="Areas\User\Views\Drawing\DrawingDetail.cshtml" />
+    <Content Include="Areas\User\Views\Drawing\Upload.cshtml" />
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
+    <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
