--- a/GMMS/GMMS.csproj
+++ b/GMMS/GMMS.csproj
@@ -179,6 +179,8 @@
     <Content Include="Areas\User\Views\Drawing\DrawingView.cshtml" />
     <Content Include="Areas\User\Views\Drawing\DrawingDetail.cshtml" />
     <Content Include="Areas\User\Views\Drawing\Upload.cshtml" />
+    <Content Include="images\地形地质图.dwg" />
+    <Content Include="Areas\User\Views\Drawing\File.cshtml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
