验证码的后端校验

--- a/GMMS.Helper/GMMS.Helper.csproj
+++ b/GMMS.Helper/GMMS.Helper.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LoginResultEnum.cs" />
     <Compile Include="MD5Encrypt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VerifyCodeHelper.cs" />
