--- a/GMMS/Web.config
+++ b/GMMS/Web.config
@@ -25,7 +25,7 @@
     <add name="UserEntities1" connectionString="metadata=res://*/Areas.User.Models.User.UserDetailModel.csdl|res://*/Areas.User.Models.User.UserDetailModel.ssdl|res://*/Areas.User.Models.User.UserDetailModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-HH5G2OUV\SQLEXPRESS;initial catalog=User;persist security info=True;user id=sa;password=266210;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="UserDetailModel" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=GMMS.Areas.User.Models.User.UserDetailModel;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="DrawingModel" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=GMMS.Areas.User.Models.Drawing.DrawingModel;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <add name="LoginAjaxResult" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=GMMS.Models.LoginAjaxResult;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
